# tddinvscode

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
include/: Ibackclient.h  RequestStatus.h  backclient.h
src/: backclient.cpp
tests/: agentTest.cpp
